fixed link & capitalisation

--- a/blog.html
+++ b/blog.html
@@ -127,7 +127,7 @@
                 <br><br>
                 So It's been over a month now since I've been working here, and ... I've learned ALOT. I'll start with the first mistake I made,,,,,,,,,,,
                 <br><br>
-                <h2> expectations </h2>
+                <h2> Expectations </h2>
                 Both my expectations and the companies. I initially thought I'd come in and start coding within my first week. I. WAS. WRONG. <br>
                 To my surprise, my first week at work mainly consisted of learning about the company and familiarizing myself with everyone. I sat through meetings about 
                 the company, learned about the tools they used and how they used them and also generally just learning about how to use the products they produce at a client level.
@@ -135,7 +135,7 @@
                 <br><br>
                 After that, I was given my first tasks - reviewing user documentation of device services that I will be eventually working on. After suggesting some improvements I then was given
                 a task to create a video demonstration of one of the device services, this was again given to me so I could familiarise myself with how edgeXpert works while also providing something 
-                useful for the marketing team. You can watch the video I produced <a href="https://www.youtube.com/watch?v=N0RPDIkrz44&t=375s">HERE</a>. 
+                useful for the marketing team. You can watch the video I produced <a href="https://www.youtube.com/watch?v=N0RPDIkrz44&t">HERE</a>. 
 
                 <br><br>
                 I say all this because, I initially had the expectation that I'd be coding within the first week, heck even within the first 2/3 weeks, but I was wrong, instead, I was just expected to
